Add cookiecutter config

--- a/{{cookiecutter.project_slug}}/server.properties
+++ b/{{cookiecutter.project_slug}}/server.properties
@@ -1,12 +1,12 @@
-server-name=Livland
+server-name={{cookiecutter.server_name}}
 # Used as the server name
 # Allowed values: Any string
 
-gamemode=survival
+gamemode={{cookiecutter.game_mode}}
 # Sets the game mode for new players.
 # Allowed values: "survival", "creative", or "adventure"
 
-difficulty=easy
+difficulty={{cookiecutter.difficulty}}
 # Sets the difficulty of the world.
 # Allowed values: "peaceful", "easy", "normal", or "hard"
 
@@ -28,7 +28,7 @@ white-list=true
 # If true then all connected players must be listed in the separate whitelist.json file.
 # Allowed values: "true" or "false"
 
-server-port=53142
+server-port=19132
 # Which IPv4 port the server should listen to.
 # Allowed values: Integers in the range [1, 65535]
 
@@ -52,7 +52,7 @@ max-threads=8
 # Maximum number of threads the server will try to use. If set to 0 or removed then it will use as many as possible.
 # Allowed values: Any positive integer.
 
-level-name=Livland 1
+level-name={{cookiecutter.level_name}}
 # Allowed values: Any string
 
 level-seed=
